--- a/pom.xml
+++ b/pom.xml
@@ -60,9 +60,35 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<java.version>1.8</java.version>
-	</properties>
+                <assertj.version>3.4.1</assertj.version>
+                <testng.version>6.9.10</testng.version>
+                <maven-compiler-plugin.version>3.5.1</maven-compiler-plugin.version>
+                <lombok.version>1.16.8</lombok.version>
+                <lombok-maven-plugin.version>1.16.8.0</lombok-maven-plugin.version>        
+                <juplo-maven-plugin.version>2.0.0</juplo-maven-plugin.version>   
+                
+                <!-- plugins de relatorios -->
+                <findbugs-maven-plugin.version>3.0.3</findbugs-maven-plugin.version>
+                <jdepend-maven-plugin.version>2.0</jdepend-maven-plugin.version>
+                <maven-pmd-plugin.version>3.6</maven-pmd-plugin.version>        
+                <maven-javadoc-plugin.version>2.10.3</maven-javadoc-plugin.version>
+                <maven-project-info-reports-plugin.version>2.9</maven-project-info-reports-plugin.version>
+                <maven-jxr-plugin.version>2.5</maven-jxr-plugin.version>
+                <maven-enforcer-plugin.version>1.4.1</maven-enforcer-plugin.version>
+                <no-package-cycles-enforcer-rule.version>1.0.5</no-package-cycles-enforcer-rule.version>        
+                <maven-failsafe-plugin.version>2.19.1</maven-failsafe-plugin.version>
+                <maven-surefire-report-plugin.version>2.19.1</maven-surefire-report-plugin.version>
+                <maven-changelog-plugin.version>2.3</maven-changelog-plugin.version>   
+                </properties>
 
 	<dependencies>
+            	<dependency>
+		<groupId>org.projectlombok</groupId>
+		<artifactId>lombok</artifactId>
+		<version>1.16.8</version>
+		<scope>provided</scope>
+                </dependency>
+                
                <dependency>
 			<groupId>org.springframework.boot</groupId>
                         <artifactId>spring-boot-starter-actuator</artifactId>
@@ -76,11 +102,38 @@
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 		
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-test</artifactId>
-			<scope>test</scope>
-		</dependency>
+                <dependency>
+                        <groupId>org.postgresql</groupId>
+                        <artifactId>postgresql</artifactId>
+                        <scope>runtime</scope>
+                </dependency>
+                 <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <version>${assertj.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>6.9.10</version>
+            <scope>test</scope>
+            <type>jar</type>
+        </dependency>
+	 <dependency>
+	  <groupId>junit</groupId>
+	  <artifactId>junit</artifactId>
+	  <version>4.12</version>
+	  <scope>test</scope>
+	  <type>jar</type>
+	 </dependency>
+	 <dependency>
+	  <groupId>org.springframework</groupId>
+	  <artifactId>spring-test</artifactId>
+	  <version>4.2.5.RELEASE</version>
+	  <scope>test</scope>
+	  <type>jar</type>
+	 </dependency>
 	</dependencies>
 	
 	<build>
@@ -88,7 +141,19 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+                                    <configuration>
+                                    <executable>true</executable>
+                                    </configuration>		
 			</plugin>
+                        
+                        <plugin>
+                            <groupId>org.apache.maven.plugins</groupId>
+                            <artifactId>maven-compiler-plugin</artifactId>
+                            <version>${maven-compiler-plugin.version}</version>
+                            <configuration>
+                               <showDeprecation>true</showDeprecation>
+                            </configuration>
+                 </plugin>
 		</plugins>
 	</build>
 	
