--- a/pom.xml
+++ b/pom.xml
@@ -1,113 +1,113 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
 
-	<groupId>br.edu.ifrn</groupId>
-	<artifactId>Todo</artifactId>
-	<version>1.0-SNAPSHOT</version>
-	<packaging>jar</packaging>
+    <groupId>br.edu.ifrn</groupId>
+    <artifactId>Todo</artifactId>
+    <version>1.0-SNAPSHOT</version>
+    <packaging>jar</packaging>
 
-	<name>Todo</name>
-	<description>Gerenciado de Tarefas</description>
-        <url>https://github.com/iceberg20/TodoList.git</url>
-        <inceptionYear>2016</inceptionYear>
-        
-        <!-- SCM -->
-        <scm>
-            <connection>scm:git:https://github.com/iceberg20/TodoList.git</connection>
-            <developerConnection>scm:git:https://github.com/iceberg20/TodoList.git</developerConnection>
-            <url>scm:git:https://github.com/iceberg20/TodoList.git</url>
-            <tag>HEAD</tag>
-        </scm>
+    <name>Todo</name>
+    <description>Gerenciado de Tarefas</description>
+    <url>https://github.com/iceberg20/TodoList.git</url>
+    <inceptionYear>2016</inceptionYear>
 
-        <developers>
-            <developer>
-                <id>todolist</id>
-                <name>Ítalo Berg Marques Souza dos Reis</name>
-                <email>italoberg@yahoo.com.br</email>
-                <timezone>-3</timezone>
-            </developer>
-            
-            <developer>
-                <id>todolist</id>
-                <name>Maria Júlia Martins Silva</name>
-                <email>mjuh.ms@gmail.com</email>
-                <timezone>-3</timezone>
-            </developer>
-            
-            <developer>
-                <id>todolist</id>
-                <name>Luan Gonçalvez Barbosa</name>
-                <email>luanluan.goncbs@gmail.com</email>
-                <timezone>-3</timezone>
-            </developer>
-                    <developer>
-                <id>todolist</id>
-                <name>Jefferson Augusto Rodrigues De Azedo</name>
-                <email>jeffersonxplode@gmail.com</email>
-                <timezone>-3</timezone>
-            </developer>
+    <!-- SCM -->
+    <scm>
+        <connection>scm:git:https://github.com/iceberg20/TodoList.git</connection>
+        <developerConnection>scm:git:https://github.com/iceberg20/TodoList.git</developerConnection>
+        <url>scm:git:https://github.com/iceberg20/TodoList.git</url>
+        <tag>HEAD</tag>
+    </scm>
+
+    <developers>
+        <developer>
+            <id>todolist</id>
+            <name>Ítalo Berg Marques Souza dos Reis</name>
+            <email>italoberg@yahoo.com.br</email>
+            <timezone>-3</timezone>
+        </developer>
+
+        <developer>
+            <id>todolist</id>
+            <name>Maria Júlia Martins Silva</name>
+            <email>mjuh.ms@gmail.com</email>
+            <timezone>-3</timezone>
+        </developer>
+
+        <developer>
+            <id>todolist</id>
+            <name>Luan Gonçalvez Barbosa</name>
+            <email>luanluan.goncbs@gmail.com</email>
+            <timezone>-3</timezone>
+        </developer>
+        <developer>
+            <id>todolist</id>
+            <name>Jefferson Augusto Rodrigues De Azedo</name>
+            <email>jeffersonxplode@gmail.com</email>
+            <timezone>-3</timezone>
+        </developer>
     </developers>
 
-	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>1.3.3.RELEASE</version>
-		<relativePath/> <!-- lookup parent from repository -->
-	</parent>
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>1.3.3.RELEASE</version>
+        <relativePath/> <!-- lookup parent from repository -->
+    </parent>
 
-	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<java.version>1.8</java.version>
-                <assertj.version>3.4.1</assertj.version>
-                <testng.version>6.9.10</testng.version> 
-                <maven-compiler-plugin.version>3.5.1</maven-compiler-plugin.version>
-                <lombok.version>1.16.8</lombok.version>
-                <lombok-maven-plugin.version>1.16.8.0</lombok-maven-plugin.version>        
-                <juplo-maven-plugin.version>2.0.0</juplo-maven-plugin.version>   
-                
-                <!-- plugins de relatorios -->
-                <findbugs-maven-plugin.version>3.0.3</findbugs-maven-plugin.version>
-                <jdepend-maven-plugin.version>2.0</jdepend-maven-plugin.version>
-                <maven-pmd-plugin.version>3.6</maven-pmd-plugin.version>        
-                <maven-javadoc-plugin.version>2.10.3</maven-javadoc-plugin.version>
-                <maven-project-info-reports-plugin.version>2.9</maven-project-info-reports-plugin.version>
-                <maven-jxr-plugin.version>2.5</maven-jxr-plugin.version>
-                <maven-enforcer-plugin.version>1.4.1</maven-enforcer-plugin.version>
-                <no-package-cycles-enforcer-rule.version>1.0.5</no-package-cycles-enforcer-rule.version>        
-                <maven-failsafe-plugin.version>2.19.1</maven-failsafe-plugin.version>
-                <maven-surefire-report-plugin.version>2.19.1</maven-surefire-report-plugin.version>
-                <maven-changelog-plugin.version>2.3</maven-changelog-plugin.version>   
-                </properties>
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <java.version>1.8</java.version>
+        <assertj.version>3.4.1</assertj.version>
+        <testng.version>6.9.10</testng.version> 
+        <maven-compiler-plugin.version>3.5.1</maven-compiler-plugin.version>
+        <lombok.version>1.16.8</lombok.version>
+        <lombok-maven-plugin.version>1.16.8.0</lombok-maven-plugin.version>        
+        <juplo-maven-plugin.version>2.0.0</juplo-maven-plugin.version>   
 
-	<dependencies>
-            	<dependency>
-		<groupId>org.projectlombok</groupId>
-		<artifactId>lombok</artifactId>
-		<version>1.16.8</version>
-		<scope>provided</scope>
-                </dependency>
-                
-               <dependency>
-			<groupId>org.springframework.boot</groupId>
-                        <artifactId>spring-boot-starter-actuator</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-devtools</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-web</artifactId>
-		</dependency>
-		
-                <dependency>
-                        <groupId>org.postgresql</groupId>
-                        <artifactId>postgresql</artifactId>
-                        <scope>runtime</scope>
-                </dependency>
-                 <dependency>
+        <!-- plugins de relatorios -->
+        <findbugs-maven-plugin.version>3.0.3</findbugs-maven-plugin.version>
+        <jdepend-maven-plugin.version>2.0</jdepend-maven-plugin.version>
+        <maven-pmd-plugin.version>3.6</maven-pmd-plugin.version>        
+        <maven-javadoc-plugin.version>2.10.3</maven-javadoc-plugin.version>
+        <maven-project-info-reports-plugin.version>2.9</maven-project-info-reports-plugin.version>
+        <maven-jxr-plugin.version>2.5</maven-jxr-plugin.version>
+        <maven-enforcer-plugin.version>1.4.1</maven-enforcer-plugin.version>
+        <no-package-cycles-enforcer-rule.version>1.0.5</no-package-cycles-enforcer-rule.version>        
+        <maven-failsafe-plugin.version>2.19.1</maven-failsafe-plugin.version>
+        <maven-surefire-report-plugin.version>2.19.1</maven-surefire-report-plugin.version>
+        <maven-changelog-plugin.version>2.3</maven-changelog-plugin.version>   
+    </properties>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.16.8</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
             <groupId>org.assertj</groupId>
             <artifactId>assertj-core</artifactId>
             <version>${assertj.version}</version>
@@ -120,43 +120,76 @@
             <scope>test</scope>
             <type>jar</type>
         </dependency>
-	 <dependency>
-	  <groupId>junit</groupId>
-	  <artifactId>junit</artifactId>
-	  <version>4.12</version>
-	  <scope>test</scope>
-	  <type>jar</type>
-	 </dependency>
-	 <dependency>
-             
-	  <groupId>org.springframework</groupId>
-	  <artifactId>spring-test</artifactId>
-	  <version>4.2.5.RELEASE</version>
-	  <scope>test</scope>
-	  <type>jar</type>
-	 </dependency>
-	</dependencies>
-	
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-                                    <configuration>
-                                    <executable>true</executable>
-                                    </configuration>		
-			</plugin>
-                        
-                        <plugin>
-                            <groupId>org.apache.maven.plugins</groupId>
-                            <artifactId>maven-compiler-plugin</artifactId>
-                            <version>${maven-compiler-plugin.version}</version>
-                            <configuration>
-                               <showDeprecation>true</showDeprecation>
-                            </configuration>
-                 </plugin>
-		</plugins>
-	</build>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+            <type>jar</type>
+        </dependency>
+        <dependency>
+
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+            <version>4.2.5.RELEASE</version>
+            <scope>test</scope>
+            <type>jar</type>
+        </dependency>
+    </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <executable>true</executable>
+                </configuration>		
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>${maven-compiler-plugin.version}</version>
+                <configuration>
+                    <showDeprecation>true</showDeprecation>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>de.juplo</groupId>
+                <artifactId>hibernate-maven-plugin</artifactId>
+                <version>${juplo-maven-plugin.version}</version>
+                <executions>
+                    <execution>
+                        <id>drop-schema</id>
+                        <goals>
+                            <goal>drop</goal>
+                        </goals>
+                        <configuration>
+                            <outputFile>${project.build.directory}/classes/drop-schema.sql</outputFile>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>create-schema</id>
+                        <goals>
+                            <goal>create</goal>
+                        </goals>
+                        <configuration>
+                            <outputFile>${project.build.directory}/classes/create-schema.sql</outputFile>
+                        </configuration>
+                    </execution>
+                </executions>
+                <configuration>
+                    <delimiter>;</delimiter>
+                    <format>true</format>
+                    <dialect>org.hibernate.dialect.PostgreSQLDialect</dialect>                            
+                    <scanDependencies>system</scanDependencies>
+                    <export>false</export>
+                    <show>true</show>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 	
 
 </project>
