--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,12 @@
         <url>scm:git:https://github.com/iceberg20/TodoList.git</url>
         <tag>HEAD</tag>
     </scm>
+    
+    <!-- Issue Managment -->
+    <issueManagement>
+        <system>Github</system>
+        <url>https://github.com/iceberg20/TodoList/issues</url>
+    </issueManagement>
 
     <developers>
         <developer>
@@ -82,6 +88,7 @@
     </properties>
 
     <dependencies>
+        
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
@@ -93,10 +100,12 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
+        
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
         </dependency>
+        
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
@@ -107,12 +116,14 @@
             <artifactId>postgresql</artifactId>
             <scope>runtime</scope>
         </dependency>
+        
         <dependency>
             <groupId>org.assertj</groupId>
             <artifactId>assertj-core</artifactId>
             <version>${assertj.version}</version>
             <scope>test</scope>
         </dependency>
+        
         <dependency>
             <groupId>org.testng</groupId>
             <artifactId>testng</artifactId>
@@ -120,6 +131,7 @@
             <scope>test</scope>
             <type>jar</type>
         </dependency>
+        
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
@@ -127,14 +139,21 @@
             <scope>test</scope>
             <type>jar</type>
         </dependency>
+        
         <dependency>
-
             <groupId>org.springframework</groupId>
             <artifactId>spring-test</artifactId>
             <version>4.2.5.RELEASE</version>
             <scope>test</scope>
             <type>jar</type>
         </dependency>
+        
+        <dependency>
+            <groupId>org.hibernate.javax.persistence</groupId>
+            <artifactId>hibernate-jpa-2.0-api</artifactId>
+            <version>1.0.0.Final</version>
+        </dependency>
+    
     </dependencies>
 
     <build>
