--- a/pom.xml
+++ b/pom.xml
@@ -173,6 +173,17 @@
         </dependency>
     </dependencies>
 
+    
+    <reporting>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-report-plugin</artifactId>
+            <version>2.19.1</version>
+          </plugin>
+        </plugins>
+    </reporting>
+    
     <build>
         <plugins>
             <plugin>
