--- a/pom.xml
+++ b/pom.xml
@@ -202,43 +202,55 @@
                     <showDeprecation>true</showDeprecation>
                 </configuration>
             </plugin>
-            <plugin>
-                <groupId>de.juplo</groupId>
-                <artifactId>hibernate-maven-plugin</artifactId>
-                <version>${juplo-maven-plugin.version}</version>
-                <executions>
-                    <execution>
-                        <id>drop-schema</id>
-                        <goals>
-                            <goal>drop</goal>
-                        </goals>
-                        <configuration>
-                            <outputFile>${project.build.directory}/classes/drop-schema.sql</outputFile>
-                        </configuration>
-                    </execution>
-                    <execution>
-                        <id>create-schema</id>
-                        <goals>
-                            <goal>create</goal>
-                        </goals>
-                        <configuration>
-                            <outputFile>${project.build.directory}/classes/create-schema.sql</outputFile>
-                        </configuration>
-                    </execution>
-                </executions>
-                <configuration>
-                    <delimiter>;</delimiter>
-                    <format>true</format>
-                    <dialect>org.hibernate.dialect.PostgreSQLDialect</dialect>                            
-                    <scanDependencies>system</scanDependencies>
-                    <export>false</export>
-                    <show>true</show>
-                </configuration>
-            </plugin>
+            
         </plugins>
     </build>
     
     <profiles>
+        
+        <!-- criar script do esquema do banco de dados -->
+        <profile>
+            <id>schema</id>
+            <build>
+                <plugins>
+                    <!-- gerando o script de criacao do banco -->            
+                    <plugin>
+                        <groupId>de.juplo</groupId>
+                        <artifactId>hibernate-maven-plugin</artifactId>
+                        <version>${juplo-maven-plugin.version}</version>
+                        <executions>
+                            <execution>
+                                <id>drop-schema</id>
+                                <goals>
+                                    <goal>drop</goal>
+                                </goals>
+                                <configuration>
+                                    <outputFile>${project.build.directory}/classes/drop-schema.sql</outputFile>
+                                </configuration>
+                            </execution>
+                            <execution>
+                                <id>create-schema</id>
+                                <goals>
+                                    <goal>create</goal>
+                                </goals>
+                                <configuration>
+                                    <outputFile>${project.build.directory}/classes/create-schema.sql</outputFile>
+                                </configuration>
+                            </execution>
+                        </executions>
+                        <configuration>
+                            <delimiter>;</delimiter>
+                            <format>true</format>
+                            <dialect>org.hibernate.dialect.PostgreSQLDialect</dialect>                            
+                            <scanDependencies>system</scanDependencies>
+                            <export>false</export>
+                            <show>true</show>
+                        </configuration>
+                    </plugin>         
+                </plugins>
+            </build>
+        </profile>
+        
         <profile>
                 <id>attach-integration-test</id>
                 <build>
@@ -265,5 +277,6 @@
                     </plugins>
                 </build>
             </profile>
-    </profiles>        
+    </profiles> 
+           
 </project>
