--- a/pom.xml
+++ b/pom.xml
@@ -90,6 +90,12 @@
     </properties>
 
     <dependencies>
+
+        <dependency>
+            <groupId>org.hsqldb</groupId>
+            <artifactId>hsqldb</artifactId>
+            <scope>test</scope>
+        </dependency> 
         
         <dependency>
             <groupId>org.projectlombok</groupId>
