--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,12 @@
         <lombok-maven-plugin.version>1.16.8.0</lombok-maven-plugin.version>        
         <juplo-maven-plugin.version>2.0.0</juplo-maven-plugin.version>   
         <javax.inject.version>1</javax.inject.version>
+        <spring-data-releasetrain.version>Hopper-SR1</spring-data-releasetrain.version>
+        <querydsl.version>4.1.2</querydsl.version>
+        <apt-maven-plugin.version>1.1.3</apt-maven-plugin.version>
+        <spring-data-releasetrain.version>Hopper-SR1</spring-data-releasetrain.version>
+        <querydsl.version>4.1.2</querydsl.version>
+        <apt-maven-plugin.version>1.1.3</apt-maven-plugin.version>
 
         <!-- plugins de relatorios -->
         <findbugs-maven-plugin.version>3.0.3</findbugs-maven-plugin.version>
@@ -110,6 +116,19 @@
             <version>${javax.inject.version}</version>
             <scope>compile</scope>
         </dependency>
+
+        <dependency>
+            <groupId>com.querydsl</groupId>
+            <artifactId>querydsl-apt</artifactId>
+            <version>${querydsl.version}</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>com.querydsl</groupId>
+            <artifactId>querydsl-jpa</artifactId>
+            <version>${querydsl.version}</version>
+        </dependency>   
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -217,7 +236,22 @@
                     <showDeprecation>true</showDeprecation>
                 </configuration>
             </plugin>
-            
+            <plugin>
+                <groupId>com.mysema.maven</groupId>
+                <artifactId>apt-maven-plugin</artifactId>
+                <version>${apt-maven-plugin.version}</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>process</goal>
+                        </goals>
+                        <configuration>
+                            <outputDirectory>target/generated-sources/java</outputDirectory>
+                            <processor>com.querydsl.apt.jpa.JPAAnnotationProcessor</processor>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
     
