--- a/pom.xml
+++ b/pom.xml
@@ -76,9 +76,6 @@
         <spring-data-releasetrain.version>Hopper-SR1</spring-data-releasetrain.version>
         <querydsl.version>4.1.2</querydsl.version>
         <apt-maven-plugin.version>1.1.3</apt-maven-plugin.version>
-        <spring-data-releasetrain.version>Hopper-SR1</spring-data-releasetrain.version>
-        <querydsl.version>4.1.2</querydsl.version>
-        <apt-maven-plugin.version>1.1.3</apt-maven-plugin.version>
 
         <!-- plugins de relatorios -->
         <findbugs-maven-plugin.version>3.0.3</findbugs-maven-plugin.version>
@@ -143,6 +140,11 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
 
         <dependency>
