--- a/pom.xml
+++ b/pom.xml
@@ -67,7 +67,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java.version>1.8</java.version>
         <assertj.version>3.4.1</assertj.version>
-        <testng.version>6.9.10</testng.version> 
+        <testng.version>6.9.11</testng.version> 
         <maven-compiler-plugin.version>3.5.1</maven-compiler-plugin.version>
         <lombok.version>1.16.8</lombok.version>
         <lombok-maven-plugin.version>1.16.8.0</lombok-maven-plugin.version>        
@@ -147,6 +147,11 @@
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-orm</artifactId>
+            <version>3.2.5.RELEASE</version>
+        </dependency>
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
