--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,20 @@
 spring:
     application:
         name: TodoYML
+        
+    datasource: 
+        url: jdbc:postgresql://localhost:5432/todo
+        username: todo
+        password: todo
+    # Number of ms to wait before throwing an exception if no connection is available.
+        max-wait: 1000
+    # Maximum number of active connections that can be allocated from this pool at the same time.
+        max-active: 4
+    # Validate the connection before borrowing it from the pool.
+        test-on-borrow: true  
+    jpa:
+        hibernate:
+          naming-strategy: org.hibernate.cfg.EJB3NamingStrategy
 
 server:
    port: 9000
