--- a/pom.xml
+++ b/pom.xml
@@ -94,13 +94,6 @@
 
     <dependencies>
         <dependency>
-            <groupId>net.bootsfaces</groupId>
-            <artifactId>bootsfaces</artifactId>
-            <version>0.9.1</version>
-            <scope>compile</scope>
-        </dependency>
-
-        <dependency>
             <groupId>org.hsqldb</groupId>
             <artifactId>hsqldb</artifactId>
             <scope>test</scope>
@@ -155,8 +148,14 @@
         
         <dependency>
             <groupId>com.github.persapiens</groupId>
-            <artifactId>jsf-spring-boot-starter</artifactId>
+            <artifactId>jsf-bootsfaces-spring-boot-starter</artifactId>
             <version>RELEASE</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>de.beyondjava</groupId>
+                    <artifactId>angularFaces-core</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         
         <dependency>
